[gd_scene load_steps=10 format=2]

[ext_resource path="res://levels/Level.gd" type="Script" id=1]
[ext_resource path="res://assets/Background/Yellow.png" type="Texture" id=2]
[ext_resource path="res://assets/tilesets/Terrain.tres" type="TileSet" id=3]
[ext_resource path="res://assets/tilesets/Spikes.tres" type="TileSet" id=4]
[ext_resource path="res://assets/tilesets/Collects.tres" type="TileSet" id=5]
[ext_resource path="res://assets/items/Door.tscn" type="PackedScene" id=6]
[ext_resource path="res://ui/HUD.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/character/player/Player.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/audio/POL-treasure-match-short.wav" type="AudioStream" id=9]

[node name="Level03" type="Node2D"]
script = ExtResource( 1 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 448, 448 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
scale = Vector2( 7, 7 )
texture = ExtResource( 2 )
centered = false

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 3 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 720896, 0, 0, 720897, 0, 1, 720898, 0, 1, 720899, 0, 1, 720900, 0, 1, 720901, 0, 1, 720902, 0, 1, 720903, 0, 1, 720904, 0, 1, 720905, 0, 1, 720906, 0, 1, 720907, 0, 1, 720908, 0, 1, 720909, 0, 1, 720910, 0, 1, 720911, 0, 1, 720912, 0, 1, 720913, 0, 1, 720914, 0, 1, 720915, 0, 1, 720916, 0, 2, 786432, 0, 131072, 786433, 0, 131073, 786434, 0, 131073, 786435, 0, 131073, 786436, 0, 131073, 786437, 0, 131073, 786438, 0, 131073, 786439, 0, 131073, 786440, 0, 131073, 786441, 0, 131073, 786442, 0, 131073, 786443, 0, 131073, 786444, 0, 131073, 786445, 0, 131073, 786446, 0, 131073, 786447, 0, 131073, 786448, 0, 131073, 786449, 0, 131073, 786450, 0, 131073, 786451, 0, 131073, 786452, 0, 131074 )

[node name="Danger" type="TileMap" parent="."]
tile_set = ExtResource( 4 )
cell_size = Vector2( 16, 16 )
format = 1

[node name="Pickups" type="TileMap" parent="."]
tile_set = ExtResource( 5 )
cell_size = Vector2( 16, 16 )
format = 1

[node name="Door" parent="." instance=ExtResource( 6 )]
position = Vector2( 192, 152 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
autoplay = true

[node name="PickupSound" type="AudioStreamPlayer" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HUD" parent="CanvasLayer" instance=ExtResource( 7 )]
visible = false
margin_bottom = 104.0

[node name="PlayerSpawn" type="Position2D" parent="."]
position = Vector2( 40, 56 )

[node name="Player" parent="." instance=ExtResource( 8 )]
position = Vector2( 144, 136 )
[connection signal="body_entered" from="Door" to="." method="_on_Door_body_entered"]
